BUGFIX: Prevent double vertical scrollbar in left sidebar

--- a/packages/neos-ui/src/Containers/LeftSideBar/style.css
+++ b/packages/neos-ui/src/Containers/LeftSideBar/style.css
@@ -9,7 +9,8 @@
     right: unset;
     position: relative;
     resize: horizontal;
-    overflow: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 .leftSideBar--isHidden {
